variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^Variables:11: error: not found: value While
While (dejaFait != nbPas){
^